Flex container gap issue fixed, menu icon move to the right

--- a/src/app/client/flexible-options/flexible-options.component.scss
+++ b/src/app/client/flexible-options/flexible-options.component.scss
@@ -256,6 +256,9 @@ h1, h2, h3, p, li {
   .section-container2 {
     padding-top: 40px;
   }
+  .section-container3 {
+    padding-top: 0;
+  }
   .section-container1, .section-container2, .section-container3 {
     height: auto;
   }
@@ -305,6 +308,9 @@ h1, h2, h3, p, li {
   }
   .section-container2 {
     padding-top: 40px;
+  }
+  .section-container3 {
+    padding-top: 0;
   }
 
   .image-text {
